# ai-playground

./: .gitignore  Cargo.toml  README.md
src/: activation_functions.rs  enviroment.rs  examples.rs  lib.rs  main.rs  neural_network.rs  perceptron.rs
