[package]
name = "ml-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Matrix multiplication and other stuff:
# ndarray = { version = "0.15.6", features = ["matrixmultiply-threading", "blas", "std"]}
ndarray = { version = "0.15.6", features = ["std"]}
rand = "0.8.5"
